--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,80 @@
     <meta charset="utf-8">
     <title>Seoul Sightseeing Sites</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <style>
+      #detailScene{
+        width:100%;
+      }
+
+      #detailWrapper{
+        width:55%;
+        border:1px solid black;
+        margin: 0 auto;
+      }
+
+      #mainCover {
+        width: 100%;
+        height: 200px;
+      }
+
+      #mainCover img{
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
+    </style>
   </head>
   <body>
 
     <!-- eunsol area -->
-    <div id='detailScene'></div>
+    <div id='detailScene'>
+      <div id='detailWrapper'>
+
+        <div id="mainCover">
+          <img src="http://english.visitkorea.or.kr/cms/content_travelGoods/90/1547290_images_1.jpg" alt="mainCover">
+        </div>
+
+        <div>
+          <h1>Namsan Tower</h1>
+          <h2>Location: (location details)</h2>
+        </div>
+
+
+          <div class="row">
+            <div id="first block" class="small-box col-xs-4">
+              <img src="./image/icon/transport_blue.png" style="width: 100%" alt="">
+            </div>
+
+            <div id="second block" class="small-box col-xs-4">
+              <img src="./image/icon/homepage_blue.png" style="width: 100%" alt="">
+            </div>
+
+            <div id="third block" class="small-box col-xs-4">
+              <img src="./image/icon/share_blue.png" style="width: 100%" alt="">
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="col-xs-6">
+              <img src="" alt="first photo slot">
+            </div>
+
+            <div class="col-xs-6">
+              <img src="" alt="second photo slot">
+            </div>
+          </div>
+
+
+        <div>
+          <h1>Description:</h1>
+          <p>The N Seoul Tower (Hangul: N서울타워), officially the YTN Seoul Tower and commonly known as the Namsan Tower or Seoul Tower, is a communication and observation tower located on Namsan Mountain in central Seoul, South Korea. At 236m, it marks the highest point in Seoul.
+            Built in 1971, the N Seoul Tower is Korea's first general radio wave tower, providing TV and radio broadcasting in Seoul. Currently, the tower broadcasts signals for Korean media outlets, such as KBS,MBC and SBS.</p>
+        </div>
+
+      </div>
+    </div> <!-- detailScene End -->
 
     <!-- gwangho area -->
     <div id='aboutUs' ></div>
